// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for useCachedRequest should show error 1`] = `
<div
  data-request={
    Object {
      "data": undefined,
      "error": [Error: Error],
      "isPending": false,
      "refetch": [Function],
    }
  }
>
  Error: Error
</div>
`;

exports[`Test for useCachedRequest should show fetched data 1`] = `
<div
  data-request={
    Object {
      "data": "bar",
      "error": undefined,
      "isPending": false,
      "refetch": [Function],
    }
  }
>
  bar
</div>
`;

exports[`Test for useCachedRequest should show pending state 1`] = `
<div
  data-request={
    Object {
      "data": undefined,
      "error": undefined,
      "isPending": true,
      "refetch": [Function],
    }
  }
>
  true
</div>
`;

exports[`Test for useRequest should show error 1`] = `
<div
  data-request={
    Object {
      "data": undefined,
      "error": [Error: Error],
      "isPending": false,
      "refetch": [Function],
    }
  }
>
  Error: Error
</div>
`;

exports[`Test for useRequest should show fetched data 1`] = `
<div
  data-request={
    Object {
      "data": "bar",
      "error": undefined,
      "isPending": false,
      "refetch": [Function],
    }
  }
>
  bar
</div>
`;

exports[`Test for useRequest should show pending state 1`] = `
<div
  data-request={
    Object {
      "data": undefined,
      "error": undefined,
      "isPending": true,
      "refetch": [Function],
    }
  }
>
  true
</div>
`;
